# matvec-prod

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  draw_plots.py
cmake/: conan.cmake  standard_project_settings.cmake
include/: bench.hpp  simd.hpp  utility.hpp
test/: bench.cpp  check_result.cpp  extern.cpp  multi_bench.cpp  single_bench.cpp
